# cft-chestx-ray14

./: .gitignore  dataset.py  main.py  model.py  pyproject.toml
.devcontainer/: Dockerfile
